# fintrak

./: .gitignore  README.md  pyproject.toml
fintrak/: analysis.py  cli.py  db.py  display.py  export.py  importer.py  tui.py
fintrak.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
