[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fintrak"
version = "0.1.0"
description = "Personal finance CLI toolkit — track credit card spending via CSV imports"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "pandas>=2.0",
    "textual>=1.0",
    "textual-autocomplete>=4.0",
    "numbers-parser>=4.0",
    "openpyxl>=3.1",
]

[project.scripts]
fintrak = "fintrak.cli:cli"
